--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,328 @@
+/*Обнуляем браузерные стили для текста*/
+.text {
+  font-size: 100%;
+  font-weight: normal;
+  margin: 0;
+}
+
+/*Обнуляем браузерные стили для списков*/
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+/*Стили для ссылок*/
+.link {
+  text-decoration: none;
+  margin: 0;
+  color: #2f80ed;
+}
+
+.link::after {
+  content: "→";
+  font-size: 1.5em;
+}
+
+/*Стили для горизонтального центрирования*/
+.centered-horizontally {
+  margin: 0 auto;
+}
+
+/*Стили для вертикального центрирования*/
+.centered-vertically {
+  margin: auto 0;
+}
+
+/*Стили для блока page*/
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+/*Стили для блока header*/
 .header {
+  display: flex;
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__title {
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 600;
+  margin-left: 64px;
+  z-index: 1;
+}
+
+.header__subtitle {
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  z-index: 1;
+}
+
+.header__main-illustration {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 765px;
+  height: 608px;
+}
+
 .header__square-pic {
-  height: 568px;
+  position: absolute;
+  top: 64px;
+  right: 0;
   width: 568px;
+  height: 568px;
+  background-color: #2f80ed;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+/*Общие стили для блока logo*/
+.logo {
+  width: 228px;
+  height: 32px;
+}
+
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  background-image: url(../images/logo_place_header.svg);
+  z-index: 1;
+}
+
+.logo_place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+}
+
+/*Стили для блока description*/
+.description {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+/*Стили для блока two-columns*/
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  width: 80%;
+}
+
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+}
+
+.two-columns__paragraph + .two-columns__paragraph {
+  margin-top: 30px;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+/*Стили для блока digits*/
+.digits {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.digits__section-subtitle {
+  margin-top: 20px;
+}
+
+/*Cтили для блоков section-title и section-subtitle*/
+.section-title {
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.section-title_theme_dark {
+  color: #fff;
+}
+
+.section-subtitle {
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  text-align: center;
+}
+
+.section-subtitle_theme_dark {
+  color: #fff;
+}
+
+/*Cтили для блока table*/
+.table {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1100px;
+}
+
+.table__theme_dark {
+  color: #fff;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
+
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
-  margin-right: 0;
   margin-top: 80px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__text {
+  margin-top: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+}
+
+/*Стили для блока feynman*/
+.feynman {
+  position: relative;
+  height: 890px;
+  padding-top: 100px;
+  background: #f2f2f2 url(../images/feynman.png) no-repeat left bottom;
+}
+
+.feynman__title {
+  width: 648px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+}
+
+.feynman__subtitle {
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  margin-top: 70px;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+}
+
+/*Стили для блока kaufman*/
+.kaufman {
+  position: relative;
+  overflow: hidden;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #1f1f1f;
+  z-index: -1;
+}
+
+.kaufman__section-subtitle {
+  margin-top: 20px;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  top: 0;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+  z-index: -2;
+}
+
+/*Стили для блока footer*/
+.footer {
+  min-height: 350px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  color: #fff;
+  background-color: #1f1f1f;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  /*Исправление проблемы с наследованием min-height в Сhrome и Safari
+  https://stackoverflow.com/questions/8468066/child-inside-parent-with-min-height-100-not-inheriting-height*/
+  min-height: inherit;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.footer__column-links {
+  margin-top: 20px;
+  margin-bottom: 16px;
+}
+
+.footer__column-link {
+  line-height: 30px;
+  font-size: 18px;
+  text-decoration: none;
+  color: #fff;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
