--- a/styles/style.css
+++ b/styles/style.css
@@ -19,19 +19,9 @@
   color: #2f80ed;
 }
 
-.link::after {
-  content: "→";
-  font-size: 1.5em;
-}
-
 /*Стили для горизонтального центрирования*/
 .centered-horizontally {
   margin: 0 auto;
-}
-
-/*Стили для вертикального центрирования*/
-.centered-vertically {
-  margin: auto 0;
 }
 
 /*Стили для блока page*/
@@ -45,6 +35,7 @@
 /*Стили для блока header*/
 .header {
   display: flex;
+  align-items: center;
   position: relative;
   height: 100vh;
   min-height: 600px;
@@ -53,7 +44,8 @@
 }
 
 .header__title {
-  width: 730px;
+  max-width: 730px;
+  width: 100%;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
@@ -65,7 +57,8 @@
   position: absolute;
   bottom: 30px;
   left: 64px;
-  width: 388px;
+  max-width: 388px;
+  width: 100%;
   line-height: 25px;
   font-size: 18px;
   z-index: 1;
@@ -154,10 +147,6 @@
   padding-bottom: 100px;
 }
 
-.digits__section-subtitle {
-  margin-top: 20px;
-}
-
 /*Cтили для блоков section-title и section-subtitle*/
 .section-title {
   width: 60%;
@@ -168,6 +157,8 @@
 }
 
 .section-title_theme_dark {
+  position: relative;
+  z-index: 1;
   color: #fff;
 }
 
@@ -176,9 +167,12 @@
   line-height: 34px;
   font-size: 24px;
   text-align: center;
+  margin-top: 20px;
 }
 
 .section-subtitle_theme_dark {
+  position: relative;
+  z-index: 1;
   color: #fff;
 }
 
@@ -190,8 +184,9 @@
   width: 1100px;
 }
 
-.table__theme_dark {
-  color: #fff;
+.table_theme_dark {
+  position: relative;
+  z-index: 1;
 }
 
 .table__cell {
@@ -210,22 +205,32 @@
   font-weight: 600;
 }
 
+.table__heading_theme_dark {
+  color: #fff;
+}
+
 .table__text {
   margin-top: 20px;
   line-height: 1.2;
   font-size: 18px;
 }
 
+.table__text_theme_dark {
+  color: #fff;
+}
+
 /*Стили для блока feynman*/
 .feynman {
+  box-sizing: border-box;
   position: relative;
-  height: 890px;
+  min-height: 890px;
   padding-top: 100px;
   background: #f2f2f2 url(../images/feynman.png) no-repeat left bottom;
 }
 
 .feynman__title {
-  width: 648px;
+  max-width: 648px;
+  width: 100%;
   text-align: center;
   line-height: 1.15;
   font-size: 120px;
@@ -254,11 +259,6 @@
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #1f1f1f;
-  z-index: -1;
-}
-
-.kaufman__section-subtitle {
-  margin-top: 20px;
 }
 
 .kaufman__triangle {
@@ -267,14 +267,13 @@
   right: -210px;
   width: 877px;
   height: 877px;
-  z-index: -2;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: contain;
 }
 
 /*Стили для блока footer*/
 .footer {
   min-height: 350px;
-  padding-top: 60px;
-  padding-bottom: 40px;
   color: #fff;
   background-color: #1f1f1f;
 }
@@ -282,10 +281,13 @@
 .footer__columns {
   display: flex;
   justify-content: space-between;
+  box-sizing: border-box;
   width: 90%;
   /*Исправление проблемы с наследованием min-height в Сhrome и Safari
   https://stackoverflow.com/questions/8468066/child-inside-parent-with-min-height-100-not-inheriting-height*/
   min-height: inherit;
+  padding-top: 60px;
+  padding-bottom: 40px;
 }
 
 .footer__column_content_copyright {
