--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -4,6 +4,6 @@
   right: -210px;
   width: 877px;
   height: 877px;
-  background-image: url(../images/kaufman-triangle.svg);
+  background-image: url(../../../images/kaufman-triangle.svg);
   background-size: contain;
 }
