Added styles for links on hover

--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -3,4 +3,9 @@
   font-size: 18px;
   text-decoration: none;
   color: #fff;
+  transition: opacity linear .1s;
+}
+
+.footer__column-link:hover {
+  opacity: .5;
 }
