--- a/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
+++ b/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
@@ -1,5 +1,6 @@
 .khan__quote-author-subline {
   line-height: 1.15;
   font-size: 24px;
-  margin-bottom: 68px;
+  font-weight: normal;
+  margin: 0 0 68px;
 }
