--- a/blocks/cards/__description/cards__description.css
+++ b/blocks/cards/__description/cards__description.css
@@ -1,6 +1,7 @@
 .cards__description {
   line-height: 23px;
   font-size: 18px;
+  font-weight: normal;
   text-align: center;
-  margin-top: 16px;
+  margin: 16px 0 0;
 }
