--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -4,4 +4,12 @@
   right: 48px;
   line-height: 51px;
   font-size: 36px;
+  text-decoration: none;
+  margin: 0;
+  color: #2f80ed;
+  transition: opacity linear .4s;
+}
+
+.feynman__link:hover {
+  opacity: .7;
 }
