--- a/blocks/feynman/__subtitle/feynman__subtitle.css
+++ b/blocks/feynman/__subtitle/feynman__subtitle.css
@@ -2,5 +2,6 @@
   text-align: center;
   line-height: 51px;
   font-size: 36px;
-  margin-top: 70px;
+  font-weight: normal;
+  margin: 70px 0 0;
 }
