--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,5 +1,13 @@
 .khan__buy-link {
   line-height: 42px;
   font-size: 30px;
-  margin-left: 48px;
+  font-weight: normal;
+  margin: 0 0 0 48px;
+  text-decoration: none;
+  color: #2f80ed;
+  transition: opacity linear .4s;
+}
+
+.khan__buy-link:hover {
+  opacity: .7;
 }
