--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,5 +1,7 @@
 .resources__logo-zone {
   display: flex;
   width: 1100px;
-  margin-top: 80px;
+  margin: 80px auto 0;
+  padding: 0;
+  list-style: none;
 }
